--- a/public/css/index.css
+++ b/public/css/index.css
@@ -22,23 +22,38 @@
   }
 
   .main_body {
-    width: 1100px;
+    width: 1400px;
     margin: 20px auto;
   }
+
+.content {
+  max-width: 1480px;
+}
 /* Global ====================================== END */
+
+
+.form-wrap.form-builder .stage-wrap {
+  width: 64%;
+}
 
 .form-wrap.form-builder .frmb {
   border: 3px dashed #ccc;
   background-color: hsla(0,0%,100%,.25);
-  height: 300px;
+  height: 800px;
   overflow: auto;
+  width: 100%;
+}
+
+.form-wrap.form-builder .cb-wrap {
+  width: 36%;
+  height: 800px;
 }
 
 #form_objects {
   display: block;
   padding: 0;
-  height: 585px;
-  width: 224px;
+  width: 505px;
+  height: 800px;
   margin-bottom: 2px;
   overflow: auto;
 }
@@ -47,11 +62,17 @@
   display: block;
   height: 40px;
   line-height: 40px;
-  background: #f15239;
+  background: #d2432c;
   font-size: 14px;
   color: #FFF;
   text-align: center;
   cursor: pointer;
+  border-bottom: 1px solid #FFF;
+  border-radius: 4px;
+}
+
+.form_object_toggle.active {
+  background: #f15239;
 }
 
 .frmb-control {
@@ -59,8 +80,11 @@
 }
 
 #form_objects .frmb-control li {
+  display: inline-block;
   height: 30px;
+  width:50%;
   padding-top: 5px;
+  margin-bottom: -5px;
 }
 
 .form_object_inner {
@@ -98,4 +122,5 @@
   height: 200px;
   overflow: auto;
   background: #FFF;
+  padding:20px;
 }
